@@ -129,6 +129,7 @@ since 1999.  If I missed your name, let me know.
 * Christian Masopust
 * Richard Mayhew
 * Mike McHenry
+* Lars Michelson
 * Martin Mielke
 * Christian Mies
 * Gary Miller
